kubernetes/applications/rosenvall-devops/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rosenvall-devops
  labels:
    app.kubernetes.io/name: rosenvall-devops
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
