kubernetes/applications/rosenvall-devops/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api
  namespace: rosenvall-devops
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: rosenvall-devops-api
  ports:
    - name: http
      port: 8080
      targetPort: http
